# droneproject_handover

./: .dockerignore  .gitignore  Dockerfile  README.md  dependencies.repos  docker-compose.yml  entrypoint.sh  notes.txt  start_project.sh
.devcontainer/: devcontainer.json
config/: glasshouse.yaml  greenhouse_Nov25.yaml  mapping.yaml  mission.yaml  nav.xml  new_waypoints.yaml  waypoints.yaml
launch/: mapping.launch  record_waypoints.launch  run_waypoints.launch
src/bt_tutorial_1/: CMakeLists.txt  package.xml
src/bt_tutorial_1/configs/: blackboard_tree.xml  my_tree.xml
src/bt_tutorial_1/src/: blackboard_tree.cpp  my_tree.cpp
src/dji_srvs/: CMakeLists.txt  package.xml
src/dji_srvs/srv/: SetString.srv  SetValue.srv
src/trajgen/: CMakeLists.txt  package.xml  packageInfo.mat
src/trajgen/src/: main.cpp  rosnodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  slros_busmsg_conversion.cpp
src/trajgen/trajGen_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rosModelInfo.mat  rosnodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  rtwtypeschksum.mat  slros_busmsg_conversion.h  slros_initialize.cpp  trajGen.cpp  trajGen_private.h
src/trajgen_with_yaw/: CMakeLists.txt  package.xml  packageInfo.mat
web_ui/: README.md  backup.js  index.html  index.js  index_ros2.html  index_ros2.js  package-lock.json  package.json  ros.js  threeScene.js  ui.js
web_ui/scripts/: greenhouse_tag_positions.ply  greenhouse_tagslam.yaml  ply_extract.py  tag_positions.ply  tagslam.yaml  transform.py
(+30 files in other folders)
