<package format="2">
  <name>dji_srvs</name>
  <version>0.1.1</version>
  <description>Custom DJI service definitions</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
</package>